Fix alignment for home image

--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -6,7 +6,7 @@
     background-position: center;
     width: 100%;
     height: 600px;
-    height: 100vh;
+    height: calc(100vh + 73px);
     display: flex;
     justify-content: center;
     align-items: center;
